<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        style="@style/Style.Wazzup.ScreenBackground"

        tools:context=".LoginActivity">

    <ImageView
            android:layout_width="@dimen/Dimension_Wazzup_AppLogo_width"
            android:layout_height="@dimen/Dimension_Wazzup_AppLogo_height"
            android:id="@+id/li_iv_appLogo"

            app:srcCompat="@drawable/wazzuplogo"

            android:contentDescription="@string/login_iv_contentDescription_"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.502"/>



    <TextView

            style="@style/Style.Wazzup.AppName"

            android:text="@string/login_tv_appName"
            android:layout_width="@dimen/Dimension_Wazzup_AppName_width"
            android:layout_height="@dimen/Dimension_Wazzup_AppName_height"
            android:id="@+id/li_tv_appName"

            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/li_iv_appLogo"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/Dimension_Wazzup_TextInputLayout_width"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"
            android:id="@+id/li_til_usernameEmail"

            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/li_tv_appName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/li_et_usernameEmail" android:layout_weight="1"
                android:hint="@string/login_et_usernameEmail"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/Dimension_Wazzup_TextInputLayout_width"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"
            android:id="@+id/li_til_password"
            android:layout_marginTop="24dp"

            app:layout_constraintTop_toBottomOf="@+id/li_til_usernameEmail"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/li_et_password" android:layout_weight="1"
                android:hint="@string/login_et_password"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
            android:text="@string/login_cb_keepMeLogin"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:id="@+id/chb_keepLogin" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/li_til_password" app:layout_constraintHorizontal_bias="0.163"/>

    <Button
            style="@style/Style.Wazzup.Button"

            android:layout_width="@dimen/Dimension_Wazzup_Button_width"
            android:layout_height="@dimen/Dimension_Wazzup_Button_height"

            android:text="@string/login_btn_Login"
            android:id="@+id/li_btn_login"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/chb_keepLogin"




    />

    <TextView
            android:text="@string/login_tv_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_createAccount"

            android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/li_btn_login"

            android:clickable="true"/>



    <TextView
            android:text="@string/login_tv_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forgotPassword"

            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="52dp" android:layout_marginRight="52dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/li_btn_login"/>


</android.support.constraint.ConstraintLayout>