<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserInfoActivity"
        style="@style/Style.Wazzup.ScreenBackground">

    <ImageView
            android:layout_width="@dimen/Dimension_Wazzup_MaterialIcon_SaveButton_width"
            android:layout_height="@dimen/Dimension_Wazzup_MaterialIcon_SaveButton_height"
            android:contentDescription="@string/ui_saveBtn_description"
            android:id="@+id/ui_iv_btnSave"

            app:srcCompat="@drawable/ui_savebutton"

             app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="131dp"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"
            android:text="@string/ui_tv_screenTitle"
            android:id="@+id/ui_tv_screenTitle"

            style="@style/Style.Wazzup.ScreenTitle"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"

            android:layout_marginTop="96dp" app:layout_constraintTop_toTopOf="parent"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"

            android:id="@+id/ui_til_firstname"

            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/ui_tv_screenTitle"
            app:layout_constraintEnd_toStartOf="@id/ui_til_lastname"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"

    >

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_et_firstname"
                android:id="@+id/ui_et_firstname"
        />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginTop="44dp"

            android:id="@+id/ui_til_lastname"

            app:layout_constraintStart_toEndOf="@+id/ui_til_firstname" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/ui_tv_screenTitle"
            app:layout_constraintHorizontal_bias="0.651"

    >

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ui_et_lastname"

        />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
            android:layout_width="305dp"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"
            android:id="@+id/ui_rg_gender"

            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/ui_til_firstname"
            android:orientation="horizontal"
    >
        <RadioButton
                android:text="@string/ui_rb_male"
                android:id="@+id/ui_rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/ui_rb_female"
                android:id="@+id/ui_rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"/>
    </RadioGroup>


    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/Dimension_Wazzup_TextInputLayout_width"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"


            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginTop="28dp"

            android:id="@+id/ui_til_birthdate"

            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/ui_rg_gender"
            app:layout_constraintHorizontal_bias="0.651">


        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ui_et_birthdate"
                android:id="@+id/ui_et_birthdate"

        />


    </android.support.design.widget.TextInputLayout>






    <!--
    <TextView

            android:layout_width="305dp"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"
            android:id="@+id/ui_et_birthDate"
            android:text="@string/ui_et_birthdate"

            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintHorizontal_bias="0.314"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/ui_rg_gender"/>


            -->

    <Spinner
            android:layout_width="@dimen/Dimension_Wazzup_TextInputLayout_width"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"
            android:id="@+id/ui_spnr_country"
            android:entries="@array/ui_spnr_country"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/ui_til_birthdate"/>


</android.support.constraint.ConstraintLayout>