<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AccountInfoActivity"

        style="@style/Style.Wazzup.ScreenBackground">


    <ImageView
            android:layout_width="@dimen/Dimension_Wazzup_MaterialIcon_RightArrow_width"
            android:layout_height="@dimen/Dimension_Wazzup_MaterialIcon_RightArrow_height"
            android:contentDescription="@string/ai_btnArrowNext_description"
            android:id="@+id/ai_iv_btnArrowNext"


            app:srcCompat="@drawable/ai_nextbutton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>


    <TextView

            style="@style/Style.Wazzup.ScreenTitle"

            android:text="@string/ai_tv_screenTitle"
            android:layout_width="@dimen/Dimension_Wazzup_ScreenTitle_width"
            android:layout_height="@dimen/Dimension_Wazzup_ScreenTitle_height"
            android:id="@+id/ai_tv_screenTitle"

            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@id/ai_til_username"
            app:layout_constraintHorizontal_bias="0.625" android:layout_marginTop="144dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/Dimension_Wazzup_TextInputLayout_width"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"
            android:id="@+id/ai_til_username"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.509" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/ai_tv_screenTitle">


        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/ai_et_username"
                android:layout_weight="1"
                android:hint="@string/ai_et_username"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/Dimension_Wazzup_TextInputLayout_width"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"

            android:id="@+id/ai_til_email"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.509" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ai_til_username">


        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/ai_et_email"
                android:layout_weight="1"
                android:hint="@string/ai_et_email"
        />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/Dimension_Wazzup_TextInputLayout_width"
            android:layout_height="@dimen/Dimension_Wazzup_TextInputLayout_height"

            android:id="@+id/ai_til_password"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.509"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ai_til_email"

            app:passwordToggleContentDescription="Show Password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0">


        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/ai_et_password"
                android:layout_weight="1"
                android:hint="@string/ai_et_password"
        />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="81dp"
            android:layout_height="52dp"
            android:id="@+id/ai_pb_progressBar"

            android:visibility="invisible"

            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/ai_til_password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.498"/>


</android.support.constraint.ConstraintLayout>